--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "compression": "^1.7.1",
+    "lazysizes": "^5.2.2",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "svelte-awesome": "^2.3.0"
   },
   "devDependencies": {
     "sapper": "^0.28.0",
